[metadata]
name = aioircc
version = file:VERSION
description = Async IRC client
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/readthedocs-fr/aioircc
download_url = https://pypi.drlazor.be/aioircc/
license = MIT
classifiers =

  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python :: 3 :: Only
